
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "native"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
generic-array = "1.3.5"
hex = "0.4.3"
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
